# pw-oss

./: Cargo.toml  LICENSE  README.md  pipewire.sh  run.sh
conf/pipewire/pipewire.conf.d/: exec.conf  oss.conf
conf/wireplumber/wireplumber.conf.d/: oss.conf
share/wireplumber/scripts/monitors/: oss.lua
src/: device.rs  dll.rs  keys.rs  lib.rs  monitor.rs  sink.rs  sound.rs  source.rs  spa.rs  utils.rs
